# calibration

./: .gitignore  CMakeLists.txt  README.md  capture.cpp  extrinsics.yml  imagelist_creator.cpp  intrinsics.yml  stereo_calib.cpp  zhang.cpp
images/: stereo_calib.xml
images1/: stereo_calib.xml
path/: images300.txt  images300_result.txt  left_images.txt  left_result.txt  right_images.txt  right_result.txt
src/: CMakeLists.txt  common_cunction.h  common_function.cpp  main.cpp
test/: CMakeLists.txt  capture_images.cpp  imagelist_creator.cpp  stereo_calib.cpp  zhang.cpp
