project(Camera_Calibration)
set(CMAKE_CXX_STANDARD 11)

find_package(OpenCV 3.0 QUIET)
if(NOT OpenCV_FOUND)    
    find_package(OpenCV 2.4.3 QUIET)
    if(NOT OpenCV_FOUND)
        message(FATAL_ERROR "OpenCV > 2.4.3 not found.")
    endif()
endif()

include_directories(${OpenCV_INCLUDE_DIR})
add_executable(capture capture.cpp)
add_executable(zhang zhang.cpp)
add_executable(stereo_calib stereo_calib.cpp)
add_executable(imagelist_creator imagelist_creator.cpp)
target_link_libraries(capture ${OpenCV_LIBS})
target_link_libraries(zhang ${OpenCV_LIBS})
target_link_libraries(stereo_calib ${OpenCV_LIBS})
target_link_libraries(imagelist_creator ${OpenCV_LIBS})
